--- a/css/style.css
+++ b/css/style.css
@@ -10,45 +10,46 @@ body {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
 }
-.row .col-1 {
-  grid-column: span 1;
-}
-.row .col-2 {
-  grid-column: span 2;
-}
-.row .col-3 {
-  grid-column: span 3;
-}
-.row .col-4 {
-  grid-column: span 4;
-}
-.row .col-5 {
-  grid-column: span 5;
-}
-.row .col-6 {
-  grid-column: span 6;
-}
-.row .col-7 {
-  grid-column: span 7;
-}
-.row .col-8 {
-  grid-column: span 8;
-}
-.row .col-9 {
-  grid-column: span 9;
-}
-.row .col-10 {
-  grid-column: span 10;
-}
-.row .col-11 {
-  grid-column: span 11;
-}
-.row .col-12 {
+.row [class*="col-"] {
   grid-column: span 12;
+  margin: 10px 0;
 }
 
-@media all and (max-width: 769px) {
-  .row [class*="col-"] {
+@media all and (min-width: 769px) {
+  .row .col-1 {
+    grid-column: span 1;
+  }
+  .row .col-2 {
+    grid-column: span 2;
+  }
+  .row .col-3 {
+    grid-column: span 3;
+  }
+  .row .col-4 {
+    grid-column: span 4;
+  }
+  .row .col-5 {
+    grid-column: span 5;
+  }
+  .row .col-6 {
+    grid-column: span 6;
+  }
+  .row .col-7 {
+    grid-column: span 7;
+  }
+  .row .col-8 {
+    grid-column: span 8;
+  }
+  .row .col-9 {
+    grid-column: span 9;
+  }
+  .row .col-10 {
+    grid-column: span 10;
+  }
+  .row .col-11 {
+    grid-column: span 11;
+  }
+  .row .col-12 {
     grid-column: span 12;
   }
 }
