--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* https://colorhunt.co/palette/213416 */
 * {
   margin: 0;
   padding: 0;
@@ -14,7 +15,50 @@ body {
   grid-column: span 12;
   margin: 10px 0;
 }
-
+.wrapper {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+.brand-link {
+  font-weight: bold;
+  font-size: 50px;
+  text-decoration: none;
+  color: #ff9642;
+}
+.searchbox-wrapper {
+  background: linear-gradient(to bottom, rgba(255, 150, 66, 0.2), #ff9642 70%);
+  border: 1px solid rgb(255, 150, 66, 0.55);
+  padding: 9px;
+  display: flex;
+  align-items: center;
+  min-height: 60px;
+}
+.searchForm {
+  width: 100%;
+}
+.searchForm button {
+  display: inline-block;
+  margin: 0 0 0 auto;
+  float: right;
+}
+.searchForm input {
+  font-size: 18px;
+}
+.nav {
+  color: #fff;
+  background: linear-gradient(to bottom, rgba(255, 150, 66, 0.2), #ff9642 70%);
+  border: 1px solid rgb(255, 150, 66, 0.55);
+}
+.nav li {
+  display: inline-block;
+  list-style: none;
+}
+.nav .nav-link {
+  text-decoration: none;
+  color: #646464;
+  padding: 20px;
+  display: inline-block;
+}
 @media all and (min-width: 769px) {
   .row .col-1 {
     grid-column: span 1;
