--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ body {
 }
 .searchForm button {
   display: inline-block;
-  margin: 0 0 0 auto;
+  margin: 5px 0 0 auto;
   background: #444;
   border: 0;
   padding: 7px 14px;
@@ -54,6 +54,11 @@ body {
   height: 30px;
   border-radius: 4px;
   border: 1px solid #000;
+}
+.searchForm label {
+  flex-grow: 1;
+  max-width: 221px;
+  margin-top: 5px;
 }
 .nav {
   color: #fff;
@@ -74,6 +79,29 @@ body {
 .nav .nav-link:hover {
   background: #fff;
   color: #e0873f;
+}
+.hero-wrapper {
+  background: linear-gradient(45deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.3)),
+    url("../img/mathematics-3821034_1280.jpg") no-repeat;
+  color: #fff;
+  min-height: 70vh;
+  padding: 30px 45px;
+  background-size: cover;
+  background-position: bottom;
+  background-attachment: fixed;
+}
+.hero-content .title {
+  color: #ff9642;
+  font-size: 55px;
+  margin-top: 5%;
+  text-shadow: 0 0 11px black;
+  max-width: 600px;
+}
+.hero-content p {
+  font-size: 20px;
+  line-height: 1.5;
+  max-width: 80%;
+  text-shadow: 0 0 3px black;
 }
 @media all and (min-width: 769px) {
   .row .col-1 {
