--- a/css/style.css
+++ b/css/style.css
@@ -66,14 +66,15 @@ body {
   border: 1px solid rgb(255, 150, 66, 0.55);
 }
 .nav li {
-  display: inline-block;
+  display: block;
+  text-align: center;
   list-style: none;
 }
 .nav .nav-link {
   text-decoration: none;
   color: #000;
   padding: 20px 40px;
-  display: inline-block;
+  display: block;
   transition: background 0.3s;
 }
 .nav .nav-link:hover {
@@ -209,5 +210,9 @@ footer {
   }
   .whyUs-wrapper {
     margin-left: 10px;
+  }
+  .nav li,
+  .nav .nav-link {
+    display: inline-block;
   }
 }
