--- a/css/style.css
+++ b/css/style.css
@@ -168,6 +168,63 @@ body {
   margin: 30px 0;
   text-shadow: 3px 4px rgba(0, 0, 0, 0.2);
 }
+.contact_form {
+  width: 80%;
+  max-width: 700px;
+  margin: 20px auto;
+}
+.contact_form .form-group {
+  position: relative;
+  margin-top: 50px;
+}
+.contact_form .form-group label {
+  position: absolute;
+  top: -30px;
+  left: 20px;
+  font-size: 20px;
+  transition: 0.2s;
+}
+.contact_form .form-control {
+  display: block;
+  width: 100%;
+  padding: 10px 20px;
+  border: 2px solid #444;
+  outline: none;
+  border-radius: 5px;
+  font-size: 20px;
+}
+.contact_form .form-control:focus {
+  border-color: #ff9642;
+}
+.contact_form .form-control:focus + label {
+  color: #ff9642;
+}
+.contact_form textarea.form-control {
+  min-height: 200px;
+}
+.contact_form .btn-submit {
+  display: block;
+  background: #ff9642;
+  padding: 20px;
+  font-size: 28px;
+  border-radius: 5px;
+  border: 2px solid transparent;
+  margin: 20px auto;
+  width: 100%;
+  max-width: 200px;
+  font-weight: bold;
+  color: #fff;
+  cursor: pointer;
+  outline: none;
+}
+.contact_form .btn-submit:hover {
+  background: transparent;
+  color: #ff9642;
+  border-color: #ff9642;
+}
+.contact_form .btn-submit:active {
+  transform: scale(0.9);
+}
 footer {
   background: #444;
   color: #fff;
